# pybeamline

./: .coveragerc  .gitignore  Conformance_Checking.py  LICENSE.txt  MVP1.ipynb  PrevDesign.py  Process_Discovery.py  README.md  TestFile.py  concept_drift.py  discovery.py  hello_world.ipynb  minitest.py  ocdfgStream.py  ocdfg_slideshow.html  publishing.md  pyproject.toml  requirements.txt  setup.py  t.py  test.ipynb  testRelation.py  test_concept_drift.py  test_discovery.py  testfile.py  tox.ini  tutorial.ipynb  tutorial_oc.ipynb
.github/workflows/: coverage.yml  pybeamline.yml
.ipynb_checkpoints/: MVP1-checkpoint.ipynb
declare4py_bridge/: README.md  output.csv  requirements.txt
declare4py_bridge/src/: Conformance_Check_for_Comparisons.ipynb  Conformance_Checker_test.ipynb  Conformance_Checking.ipynb  Conformance_Checking_using_pybeamline.ipynb  Declare_Model.ipynb  Eventlog_management.ipynb  Online_Conformance_Checker_Tutorial.ipynb  extension_log_4.decl  test.file
evaulation/: validation.py
ipynbs/MVP1/: MVP1.ipynb  research.ipynb
ipynbs/MVP2/: MVP2.ipynb
ipynbs/MVP3Testing/: test.ipynb  testing_aer_diagram.ipynb  testing_ocdfg.ipynb
pybeamline/: abstractevent.py  bevent.py  boevent.py  pybeamline.py  sources.py  utils.py
pybeamline/algorithms/: lambda_operator.py  oc_operator.py  ocdfg_merge_operator.py
pybeamline/filters/: __init__.py  filters.py
pybeamline/mappers/: __init__.py  dfg_str_to_graphviz.py  infinite_size_directly_follows_mapper.py  infinite_size_oc_directly_follows_graph.py  print_operator.py  sliding_window_to_log.py  sliding_window_to_ocel.py  take_mapper.py  to_directly_follow_relations.py  windows.py
pybeamline/models/: aer.py  incremental_mean.py  ocdfg.py
pybeamline/objects/: aer_diagram.py  dfm.py  object_relation_model.py  ocdfg.py  ocdfgvisualizer.py  umlvisualizer.py
pybeamline/sinks/: dotted_chart_sink.py  graphviz_sink.py  heatmap_sink.py  oc_visualizer_sink.py  print_sink.py
pybeamline/sources/: __init__.py  dict_ocel_test_source.py  dict_to_ocel.py  (+9 more)
tests/: intermediate  test_bevent.py  testing_log.ipynb
(+96 files in other folders)
