[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybeamline"
version = "2.0.0"
requires-python = ">=3.9"
description = "Streaming Process Mining"
readme = "README.md"
authors = [
    { name = "Andrea Burattin" }
]
license-files = [ "LICENSE.txt" ]
dependencies = [
    "graphviz>=0.20,<1.0",
    "objsize~=0.7.0",
    "paho-mqtt>=2.1,<3.0",
    "pandas>=2.2,<3.0",
    "pm4py>=2.7.19.3",
    "pyais>=2.8,<3.0",
    "reactivex==4.1.0",
    "requests>=2.31,<3.0",
    "river>=0.21.2",
    "typing_extensions>=4.0,<5.0",
    "numpy>=1.26,<3",
    # for visualization
    "matplotlib", "imageio", "pillow",
    # for interactivity
    "ipython"
]

[project.urls]
Homepage = "https://beamline.cloud/"
Issues = "https://github.com/beamline/pybeamline/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pybeamline*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "pip-tools",
    "tox>=4.0"
]
test = [
    "pytest",
    "coverage"
]
